# IntegerWords

./: IntegerWords.py  README.md  pyproject.toml  run-tests.sh  setup.py
src/: IntegerWords.py  __main__.py  cli.py
src/integerwords/: IntegerWords.py  __main__.py  cli.py
tests/: test_all.py
